--- a/installation_on_site.ipynb
+++ b/installation_on_site.ipynb
@@ -109,6 +109,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Instrument should point to the north when asked position in tilt is 90° "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -201,36 +208,6 @@
     "\n",
     "out = HBox([VBox([radiometer, entrance]), VBox([IT_Vnir, IT_Swir])])\n",
     "display(out)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "from IPython.display import HTML\n",
-    "\n",
-    "HTML('''<script>\n",
-    "code_show=true;\n",
-    "function code_toggle(){\n",
-    "if(code_show){$('div.input').hide();}\n",
-    "else{$('div.input').show();}\n",
-    "code_show = !code_show;}\n",
-    "$(document).ready(code_toggle);\n",
-    "</script>\n",
-    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" \n",
-    "value=\"[Click here to toggle on/off the raw code.]\"></form>''')"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "from IPython.display import Javascript\n",
-    "\n",
-    "def goto_cell_two():\n",
-    "    Javascript(\"Jupyter.notebook.execute_cells[3]\")\n",
-    "\n",
-    "goto_cell_two()"
    ]
   }
  ],
